tests/baselines/reference/multipleDefaultExports03(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
multipleDefaultExports03.ts(1,22): error TS2528: A module cannot have multiple default exports.
multipleDefaultExports03.ts(4,22): error TS2528: A module cannot have multiple default exports.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== multipleDefaultExports03.ts (2 errors) ====
    export default class C {
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 multipleDefaultExports03.ts:4:22: Another export default is here.
    }
    
    export default class C {
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleDefaultExports03.ts:1:22: The first export default is here.
    }